hphp/test/zend/good/ext/gmp/tests/gmp_pow.php
<?php

var_dump(gmp_strval(gmp_pow(2,10)));
var_dump(gmp_strval(gmp_pow(-2,10)));
var_dump(gmp_strval(gmp_pow(-2,11)));
var_dump(gmp_strval(gmp_pow("2",10)));
var_dump(gmp_strval(gmp_pow("2",0)));
var_dump(gmp_strval(gmp_pow("2",-1)));
var_dump(gmp_strval(gmp_pow("-2",10)));
var_dump(gmp_strval(gmp_pow(20,10)));
var_dump(gmp_strval(gmp_pow(50,10)));
var_dump(gmp_strval(gmp_pow(50,-5)));

$n = gmp_init("20");
var_dump(gmp_strval(gmp_pow($n,10)));
$n = gmp_init("-20");
var_dump(gmp_strval(gmp_pow($n,10)));

var_dump(gmp_pow(2,10,1));
var_dump(gmp_pow(2));
var_dump(gmp_pow());
var_dump(gmp_pow(array(), array()));
var_dump(gmp_pow(2,array()));
var_dump(gmp_pow(array(),10));

echo "Done\n";
?>
